[package]
name = "ycsb"
version = "0.0.0"
authors = ["Pekka Enberg <penberg@chiselstrike.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.52"
futures = "0.3.18"
log = "0.4"
rand = {version = "0.8", features = ["small_rng"]}
serde = { version = "1.0.130", features = ["derive"] }
sql-builder = "3.1"
chiselstore = { path = "../chiselstore" }
sqlite = "0.26.0"
structopt = "0.3.23"
tokio = { version = "1.11.0", features = ["full"] }
toml = "0.5.8"
tonic = "0.5.2"
async_once = "0.2.1"
lazy_static = "1.4.0"

[profile.release]
debug = true
